--- a/CSS/default.css
+++ b/CSS/default.css
@@ -1,14 +1,17 @@
 html, body {
+
 	height: 100%;
 }
 
 body {
+
 	margin: 0px;
 	padding: 0px;
-	background: #CBBB9A url(images/main-bg.jpg) repeat;
+	/*background: #CBBB9A url(images/main-bg.jpg) repeat;*/
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #545454;
+	background-color: #AAAAAA	;
 }
 
 h1  {
@@ -76,16 +79,19 @@ hr {
 /** WRAPPER */
 
 #wrapper {
+
 	overflow: hidden;
 	width: 1200px;
 	margin: 50px auto;
 	background: #FFFFFF;
+	background-color: #25252C	;
 	box-shadow: 0px 0px 10px 5px rgba(0,0,0,.2);
 }
 
 .container {
 	width: 1200px;
 	margin: 0px auto;
+
 }
 
 .clearfix {
@@ -147,13 +153,12 @@ hr {
     
     border-radius: 10px;
 	float: right;
-	width: 700px;
 	padding: 60px 50px 0px 0px;
 }
 
 #menu ul
 {
-
+    
 	float: right;
 	margin: 0;
 	padding: 0px 0px 0px 0px;
@@ -175,7 +180,7 @@ hr {
 	width:140px;
 	margin-left: 2px;
 	border-radius: 6px;
-	padding: 7px 7px 7px 7px;
+	padding: 7px 14px 7px 14px;
 	letter-spacing: 1px;
 	text-decoration: none;
 	text-align: center;
@@ -196,6 +201,7 @@ hr {
 /** PAGE */
 
 #page {
+
 	overflow: hidden;
 	width: 1100px;
 	padding: 50px 50px;
@@ -210,6 +216,7 @@ hr {
 /** CONTENT */
 
 #content {
+
 	float: left;
 	width: 750px;
 }
@@ -224,6 +231,7 @@ hr {
 /* Footer */
 
 #footer {
+	background-color: #25252C	;
 	overflow: hidden;
 	margin: 0px 50px;
 	padding: 30px 0px;
@@ -242,6 +250,7 @@ hr {
 /* Three Column */
 
 #three-column {
+	color: #DDDDDD;
 	overflow: hidden;
 	margin: 0px 50px;
 	padding: 50px 0px;
@@ -266,6 +275,7 @@ hr {
 /* List Style 1 */
 
 ul.style1 {
+
 	margin: 0px;
 	padding: 0px;
 	list-style: none;
@@ -278,7 +288,7 @@ ul.style1 li {
 
 ul.style1 a {
 	text-decoration: none;
-	color: #545454;
+	/*color: #545454;*/
 }
 
 ul.style1 a:hover {
@@ -336,6 +346,15 @@ ul.style2 a:hover {
 	text-decoration: none;
 	text-transform: uppercase;
 	color: #FFFFFF;
+}
+
+.photo{
+float: left;
+height:190px;
+padding-top: 10px;
+padding-right: 20px; 
+
+
 }
 
 .wishes{
