--- a/CSS/default.css
+++ b/CSS/default.css
@@ -7,11 +7,14 @@ body {
 
 	margin: 0px;
 	padding: 0px;
+	 /*url(../images/bg.jpg) no-repeat;*/
+	/* Safari 4-5, Chrome 1-9 */ background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#888888), to(#DDDDDD)); /* Safari 5.1, Chrome 10+ */ background: -webkit-linear-gradient(top, #888888, #DDDDDD); /* Firefox 3.6+ */ background: -moz-linear-gradient(top, #888888, #DDDDDD); /* IE 10 */ background: -ms-linear-gradient(top, #888888, #DDDDDD); /* Opera 11.10+ */ background: -o-linear-gradient(top, #888888, #DDDDDD); 
 	/*background: #CBBB9A url(images/main-bg.jpg) repeat;*/
+	background-repeat: no-repeat;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
+	background-color: #DDDDDD;
 	color: #545454;
-	background-color: #AAAAAA	;
 }
 
 h1  {
